--- a/static-assets/css/style.css
+++ b/static-assets/css/style.css
@@ -824,7 +824,7 @@ ul.dc_paginationA03 li a:hover, ul.dc_paginationA03 li a.current {
 	padding-bottom:5px;
 	font-family: 'Ropa Sans', sans-serif;
 }
-.contact-form input[type="text"],.contact-form textarea{
+.contact-form input[type="text"],input[type="email"],.contact-form textarea{
 		    padding:8px;
 			display:block;
 			width:98%;
@@ -958,7 +958,7 @@ ul.dc_paginationA03 li a:hover, ul.dc_paginationA03 li a.current {
 		padding:3%; 
 	}
    
-   .contact-form input[type="text"],.contact-form textarea{
+   .contact-form input[type="text"],input[type="email"],.contact-form textarea{
 		width:97%;
 	}
 }
@@ -979,7 +979,7 @@ ul.dc_paginationA03 li a:hover, ul.dc_paginationA03 li a.current {
 		width:90%;
 		padding:5%; 
 	}
-	.contact-form input[type="text"],.contact-form textarea{
+	.contact-form input[type="text"],input[type="email"],.contact-form textarea{
 		width:92%;
 	}
 }
